crates/forge-template/tests/snapshots/snapshot_tests__service__products_service_spec_ts.snap
---
source: crates/forge-template/tests/snapshot_tests.rs
expression: file.contents
---
import { Test, TestingModule } from '@nestjs/testing';
import { ProductsService } from './products.service';

describe('ProductsService', () => {
  let service: ProductsService;

  beforeEach(async () => {
    const module: TestingModule = await Test.createTestingModule({
      providers: [ProductsService],
    }).compile();

    service = module.get<ProductsService>(ProductsService);
  });

  it('should be defined', () => {
    expect(service).toBeDefined();
  });
});
