crates/forge-template/tests/snapshots/snapshot_tests__service__products_service_ts.snap
---
source: crates/forge-template/tests/snapshot_tests.rs
expression: file.contents
---
import { Injectable } from '@nestjs/common';

@Injectable()
export class ProductsService {
  // TODO: inject dependencies via constructor
}
